<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.OrderConfirmed">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/confirmedTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/order_confirmed"
            android:textSize="30sp"
            />

        <ImageView
            android:id="@+id/confirmedImageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_baseline_check_24"
            android:visibility="invisible"/>
        <Button
            android:id="@+id/backToStoreImageButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/button"
            android:text="@string/back_to_store"
            app:layout_constraintBottom_toBottomOf="parent"
            android:onClick="goToStore"/>
        <Button
            android:id="@+id/logoutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/button"
            android:text="@string/logout"
            app:layout_constraintBottom_toBottomOf="parent"
            android:onClick="goToLogin"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>