<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.LoginActivity">


    <LinearLayout
        android:id="@+id/titleLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/appLogoImageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_baseline_menu_book_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:tint="@color/jungle_green" />

        <TextView
            android:id="@+id/appTitleImageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book_store_Title"
            android:textAlignment="center"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/registerTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/login"
        android:textAlignment="center"
        android:textSize="40sp"
        app:layout_constraintTop_toBottomOf="@id/titleLinearLayout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loginFormConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/loginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerTextView">

        <LinearLayout
            android:id="@+id/loginFormLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/usernameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:autofillHints="username"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:hint="@string/username"
                android:inputType="text"
                android:maxLines="1"
                android:minHeight="48dp"
                android:shadowColor="@color/jungle_green"
                android:textColorHint="@color/jungle_green" />

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:autofillHints="password"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:minHeight="48dp"
                android:shadowColor="@color/jungle_green"
                android:textColorHint="@color/jungle_green" />

            <TextView
                android:id="@+id/goToRegisterTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/goToRegisterMessage"
                android:textAlignment="center" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/button"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>